--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,11 +1,13 @@
 # Original credit: https://github.com/jpetazzo/dockvpn
 
 # Smallest base image
-FROM alpine:latest
+FROM alpine:3.14
 
 LABEL maintainer="Kyle Manna <kyle@kylemanna.com>"
 
-RUN apk add --update openvpn iptables bash easy-rsa openvpn-auth-pam google-authenticator pamtester && \
+RUN echo "http://dl-4.alpinelinux.org/alpine/edge/community/" >> /etc/apk/repositories && \
+    echo "http://dl-4.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories && \
+    apk add --update openvpn iptables bash easy-rsa openvpn-auth-pam google-authenticator pamtester && \
     ln -s /usr/share/easy-rsa/easyrsa /usr/local/bin && \
     rm -rf /tmp/* /var/tmp/* /var/cache/apk/* /var/cache/distfiles/*
 
